--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -14,9 +14,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="separatorColor" red="0.92926246759999998" green="0.46792270619999998" blue="0.062776419649999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" text="" id="d2b-yt-mtr">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="weatherTableViewCell" rowHeight="224" id="ujn-IK-e5j" customClass="WeatherTableViewCell" customModule="WeatherApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="224"/>
+                                <rect key="frame" x="0.0" y="72" width="414" height="224"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" tableViewCell="ujn-IK-e5j" id="IQu-Pd-ik4" customClass="WeatherTableViewCell" customModule="WeatherApp" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="224"/>
@@ -96,10 +101,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Weather in cities" leftItemsSupplementBackButton="YES" id="gPN-dv-WUu"/>
+                    <connections>
+                        <outlet property="searchBar" destination="d2b-yt-mtr" id="sPv-IG-IS5"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kBu-Gd-jpA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3902.898550724638" y="57.589285714285708"/>
+            <point key="canvasLocation" x="3772" y="58"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0Tf-Zd-KRL">
@@ -112,7 +120,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="152-Gs-6b5" kind="relationship" relationship="rootViewController" id="5nX-T1-I24"/>
+                        <segue destination="152-Gs-6b5" kind="relationship" relationship="rootViewController" id="c8n-S8-zEt"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Vb-Op-BTh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
