--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -149,12 +149,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="99" height="129"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hp3-dp-XOo">
-                                                    <rect key="frame" x="13" y="34" width="72" height="60"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hp3-dp-XOo">
+                                                    <rect key="frame" x="13" y="34" width="72" height="68.5"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6E-64-D4g">
-                                                    <rect key="frame" x="28" y="96" width="48" height="29"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6E-64-D4g">
+                                                    <rect key="frame" x="28" y="104.5" width="48" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -171,12 +170,16 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="l6E-64-D4g" firstAttribute="top" secondItem="Hp3-dp-XOo" secondAttribute="bottom" constant="2" id="Byz-9i-A0a"/>
                                                 <constraint firstAttribute="trailing" secondItem="Hp3-dp-XOo" secondAttribute="trailing" constant="14" id="GCA-i7-lg3"/>
+                                                <constraint firstAttribute="bottom" secondItem="l6E-64-D4g" secondAttribute="bottom" constant="4" id="Hpi-cr-Qqb"/>
+                                                <constraint firstItem="l6E-64-D4g" firstAttribute="leading" secondItem="4wp-Z6-VJj" secondAttribute="leading" constant="28" id="PPR-jp-GIS"/>
                                                 <constraint firstItem="6gf-lb-iCL" firstAttribute="leading" secondItem="4wp-Z6-VJj" secondAttribute="leading" constant="23" id="WEu-s6-gtD"/>
                                                 <constraint firstItem="Hp3-dp-XOo" firstAttribute="leading" secondItem="4wp-Z6-VJj" secondAttribute="leading" constant="13" id="kZh-IL-x4v"/>
                                                 <constraint firstItem="6gf-lb-iCL" firstAttribute="top" secondItem="4wp-Z6-VJj" secondAttribute="top" constant="8" id="ph9-5p-cBx"/>
                                                 <constraint firstItem="Hp3-dp-XOo" firstAttribute="top" secondItem="6gf-lb-iCL" secondAttribute="bottom" constant="-1" id="sBo-NU-Vn4"/>
                                                 <constraint firstAttribute="trailing" secondItem="6gf-lb-iCL" secondAttribute="trailing" constant="23" id="ucD-zd-NJj"/>
+                                                <constraint firstAttribute="trailing" secondItem="l6E-64-D4g" secondAttribute="trailing" constant="23" id="wQM-yQ-P3L"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="99" height="129"/>
